code cleanup in channels setup and Race.toString. also changed the top line of output to be "*** RACE #<racenum> <RaceType> ***"